deploy/k8s/manifests/01-mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-logs
              mountPath: /var/log/mongodb
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-pvc
        - name: mongo-logs
          persistentVolumeClaim:
            claimName: mongo-logs-pvc
