deploy/k8s/manifests/02-acme-devel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-deploy
  labels:
    app: acme-devel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acme-devel
  template:
    metadata:
      labels:
        app: acme-devel
    spec:
      containers:
        - name: acme-devel
          image: amg98/acme-explorer
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: acme-devel
spec:
  selector:
    app: acme-devel
  ports:
    - port: 8080
      targetPort: 8080
