deploy/k8s/manifests/03-acme-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-prod-deploy
  labels:
    app: acme-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acme-prod
  template:
    metadata:
      labels:
        app: acme-prod
    spec:
      containers:
        - name: acme-prod
          image: amg98/acme-explorer
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: acme-prod
spec:
  selector:
    app: acme-prod
  ports:
    - port: 8080
      targetPort: 8080
