deploy/k8s/manifests/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: development.acmeexplorer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acme-devel
            port: 
              number: 8080
  - host: acmeexplorer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acme-prod
            port:
              number: 8080
